# glue-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.test.txt  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  requirements.txt
src/glue_utils/: __init__.py  context.py  helpers.py  options.py
src/glue_utils/glueetl/: __init__.py  job.py
src/glue_utils/pyspark/: __init__.py  connection_options.py  connection_types.py  context.py  format_options.py  formats.py  job.py  options.py
src/glue_utils/pyspark/context/: __init__.py  documentdb.py  dynamodb.py  jdbc.py  kafka.py  kinesis.py  mongodb.py  opensearch.py  s3.py
src/glue_utils/pyspark/mixins/: __init__.py  connection_types.py  jdbc.py  s3.py
test/: test_context.py  test_helpers.py  test_options.py
test/glueetl/: test_job.py
test/pyspark/: test_context.py  test_job.py  test_options.py
test/pyspark/context/: conftest.py  test_documentdb.py  test_dynamodb.py  test_jdbc.py  test_kafka.py  test_kinesis.py  test_mongodb.py  test_opensearch.py  test_s3.py
